# LastMinute.ai

./: .gitignore  README.md  ingest.py  ingest_output.json  main.py  package-lock.json  package.json  pipeline_graph.py  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
agents/: README.md  curriculum.ts  document.ts  evaluation.ts  media.ts  story.ts  tutor.ts
agents/loaders/: __init__.py  base_loader.py  image_loader.py  loader_factory.py  pdf_loader.py  ppt_loader.py  text_loader.py
agents/preprocessing/: text_normalizer.py
app/: globals.css  layout.tsx  page.tsx
app/api/: README.md
app/api/chat/: route.ts
app/api/session/: route.ts
app/api/upload/: route.ts
app/workspace/: page.tsx
components/: README.md
components/ui/: v0-ai-chat.tsx
components/workspace/: README.md  image-annotator.tsx  lesson-view.tsx  mission-canvas.tsx  support-panel.tsx  topic-drawing-overlay.tsx  tutor-chat.tsx
lib/: README.md  session-store.ts
types/: README.md  index.ts
